<resources>
    <string name="app_name">TacOps</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>

    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="score">Score</string>
    <string name="time">Time Remaining: 00:00</string>
    <string name="Alerts">Alerts</string>

    <string name="action_settings">action_settings</string>
    <string name="intro">Score Team 1</string>
    <string name="addone">+1</string>
    <string name="subtractone">-1</string>
    <string name="reset">RESET SCORE</string>

    <string name="action_settings1">action_settings</string>
    <string name="intro1">Score Team 2</string>
    <string name="addone1">+1</string>
    <string name="subtractone1">-1</string>
    <string name="reset1">RESET SCORE</string>

    //Join game dialog
    <string name="JOIN">Join</string>
    <string name="Cancel">Cancel</string>
    <string name="Password">Enter Password</string>
    <string name="Capacity">Capacity</string>

    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <!--<string name="default_web_client_id">449986085284-2qm326bgjhfllgt0jk3f0ktlkggb33ba.apps.googleusercontent.com</string>-->
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
</resources>
