<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">



    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"

        android:padding="10dp"
        android:paddingBottom="15dp"/>

    <LinearLayout
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/edittext">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:background="@color/dialog_cancel_bgcolor"
            android:text="@string/Cancel"/>

        <Button
            android:id="@+id/dialog_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="@color/dialog_ok_bgcolor"
            android:text="@string/JOIN"/>

    </LinearLayout>
</RelativeLayout>

